--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jquery": "^3.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-select": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
