--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "react-select": "^2.2.0"
+    "react-select": "^2.2.0",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
