--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery": "^3.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.2.0",
     "react-slick": "^0.23.2",
